Fix default url to reflect new _woof paths

--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -9,7 +9,7 @@ init app_display_name "Woof!"
 
 # Default controller and action if not specified in request URL.
 # You should also set url_root in the application.cfg file.
-init app_default_uri woof/_manage/index
+init app_default_uri _woof/manage/welcome
 
 # Where the application resides under the woof root. Normally "app" (default)
 # but can be set to "test" or whatever else
