Added app_default_language configuration variable and use it in page generation

--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -15,6 +15,10 @@ init app_default_uri _woof/manage/welcome
 # but can be set to "test" or whatever else
 init app_dir app
 
+# The language id for the language that the top level view files are
+# written in.
+init app_default_language en
+
 # run_mode - development, or production
 # init run_mode production
 init run_mode development
