--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -41,6 +41,8 @@ init log_file woof.log
 # Controls whether error stacks are displayed in the browser
 init expose_error_detail [expr {($run_mode eq "development") ? "true" : "false"}]
 
-
-
-
+# List of directories that can be read by application in addition to standard
+# directories. If you are loading any extra packages their directories (or
+# a parent) must be listed here
+# Example: init lib_dirs [list /usr/lib/tcl /usr/local/lib/tcl]
+init lib_dirs [list ]
