Changes for routes

--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -46,3 +46,6 @@ init expose_error_detail [expr {($run_mode eq "development") ? "true" : "false"}
 # a parent) must be listed here
 # Example: init lib_dirs [list /usr/lib/tcl /usr/local/lib/tcl]
 init lib_dirs [list ]
+
+# Path to the route definition file
+init route_file config/routes.cfg
