Added some more test configs

--- a/tests/apache/common.conf
+++ b/tests/apache/common.conf
@@ -1,46 +1,40 @@
-# Woof! apache test config
-# - Woof! URL root at /
-# - Woof! file system root at /var/myappdir
-# - Document root is Woof public directory
-# - CGI
-
-ServerRoot "C:/Program Files/Apache Software Foundation/Apache2.2"
-Listen 8080
-
-LoadModule cgi_module modules/mod_cgi.so
+LoadModule authz_host_module modules/mod_authz_host.so
+LoadModule log_config_module modules/mod_log_config.so
 LoadModule env_module modules/mod_env.so
 LoadModule mime_module modules/mod_mime.so
 
-ServerAdmin admin@localhost
-ServerName localhost:8080
-
-#
-# DocumentRoot: The directory out of which you will serve your
-# documents. By default, all requests are taken from this directory, but
-# symbolic links and aliases may be used to point to other locations.
-#
-DocumentRoot "/var/myappdir/public"
-
-<Directory "/var/myappdir/public">
-    AddHandler cgi-script .pl
-    AddHandler cgi-script .tcl
-    Options +ExecCGI
-</Directory>
-
 ErrorLog "logs/error.log"
 LogLevel info
+<IfModule log_config_module>
+    #
+    # The following directives define some format nicknames for use with
+    # a CustomLog directive (see below).
+    #
+    LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+    LogFormat "%h %l %u %t \"%r\" %>s %b" common
 
-#
-# DefaultType: the default MIME type the server will use for a document
-# if it cannot otherwise determine one, such as from filename extensions.
-# If your server contains mostly text or HTML documents, "text/plain" is
-# a good value.  If most of your content is binary, such as applications
-# or images, you may want to use "application/octet-stream" instead to
-# keep browsers from trying to display binary files as though they are
-# text.
-#
+    <IfModule logio_module>
+      # You need to enable mod_logio.c to use %I and %O
+      LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
+    </IfModule>
+
+    #
+    # The location and format of the access logfile (Common Logfile Format).
+    # If you do not define any access logfiles within a <VirtualHost>
+    # container, they will be logged here.  Contrariwise, if you *do*
+    # define per-<VirtualHost> access logfiles, transactions will be
+    # logged therein and *not* in this file.
+    #
+    CustomLog "logs/access.log" common
+
+    #
+    # If you prefer a logfile with access, agent, and referer information
+    # (Combined Logfile Format) you can use the following directive.
+    #
+    #CustomLog "logs/access.log" combined
+</IfModule>
+
 DefaultType text/plain
-
 <IfModule mime_module>
     #
     # TypesConfig points to the file containing the list of mappings from
