More docs, mostly on routing

--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -9,7 +9,8 @@ init app_display_name "Woof!"
 
 # Default controller and action if not specified in request URL.
 # You should also set url_root in the application.cfg file.
-init app_default_uri _woof/manage/welcome
+# Note this is the relative path.
+init app_default_uri_path _woof/manage/welcome
 
 # Where the application resides under the woof root. Normally "app" (default)
 # but can be set to "test" or whatever else
