Renamed loglevel to log_level

--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -31,7 +31,7 @@ init reload_scripts [expr {($run_mode eq "development") ? "true" : "false"}]
 init reload_templates [expr {($run_mode eq "development") ? "true" : "false"}]
 
 # loglevel - debug, info, notice, warn, err, crit, alert, emerg
-init loglevel [expr {($run_mode eq "development") ? "debug" : "info"}]
+init log_level [expr {($run_mode eq "development") ? "debug" : "info"}]
 
 # Directory and file name for log files.
 # This may or may not be used depending on the
