--- a/tests/apache/httpd-cgi-alias.conf
+++ b/tests/apache/httpd-cgi-alias.conf
@@ -3,10 +3,10 @@
 # - Woof! file system root at /var/myappdir
 # - CGI with script accessed through Alias
 
-ServerRoot "C:/Program Files/Apache Software Foundation/Apache2.2"
+ServerRoot "%SERVER_ROOT%"
 Listen 8080
 
-Include common.conf
+Include conf/common.conf
 
 LoadModule alias_module modules/mod_alias.so
 LoadModule cgi_module modules/mod_cgi.so
@@ -14,18 +14,22 @@ LoadModule cgi_module modules/mod_cgi.so
 ServerAdmin admin@localhost
 ServerName localhost:8080
 
-DocumentRoot "C:/Program Files/Apache Software Foundation/Apache2.2/htdocs"
+DocumentRoot "%SERVER_ROOT%/htdocs"
 <Directory />
     Options FollowSymLinks
     AllowOverride All
     Order deny,allow
     Deny from all
 </Directory>
+<Directory "%SERVER_ROOT%/htdocs">
+    Order allow,deny
+    Allow from all
+</Directory>
 
-Alias /myapp/stylesheets "/var/myappdir/public/stylesheets"
-Alias /myapp/images "/var/myappdir/public/images"
-Alias /myapp "/var/myappdir/public/cgi_server.tcl"
-<Directory "/var/myappdir/public">
+Alias /myapp/stylesheets "%WOOF_ROOT%/public/stylesheets"
+Alias /myapp/images "%WOOF_ROOT%/public/images"
+Alias /myapp "%WOOF_ROOT%/public/cgi_server.tcl"
+<Directory "%WOOF_ROOT%/public">
     Order allow,deny
     Allow from all
     AddHandler cgi-script .pl
