--- a/tests/apache/httpd-cgi-dedicated.conf
+++ b/tests/apache/httpd-cgi-dedicated.conf
@@ -1,10 +1,9 @@
 # Woof! apache test config
 # - Woof! URL root at /
-# - Woof! file system root at /var/myappdir
 # - Document root is Woof public directory
 # - CGI
 
-ServerRoot "C:/Program Files/Apache Software Foundation/Apache2.2"
+ServerRoot "%SERVER_ROOT%"
 Listen 8080
 
 Include conf/common.conf
@@ -16,13 +15,13 @@ ServerAdmin admin@localhost
 ServerName localhost:8080
 
 
-DocumentRoot "/var/myappdir/public"
-<Directory "/var/myappdir/public">
+DocumentRoot "%WOOF_ROOT%/public"
+<Directory "%WOOF_ROOT%/public">
     AddHandler cgi-script .pl
     AddHandler cgi-script .tcl
     Options +ExecCGI
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ cgi_server.tcl [QSA,L]
+    RewriteRule ^(.*)$ cgi_server.tcl?$1 [QSA,L]
 </Directory>
 
