More changes related to reword controller urls

--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -3,14 +3,19 @@
 # To modify a setting, edit the application.cfg file instead which
 # will override the settings from this file.
 
+# Where the application has its URL root
+init url_root /
+
 # Application internal and display names. You should always override these.
 init app_name "woof"
 init app_display_name "Woof!"
 
 # Default controller and action if not specified in request URL.
 # You should also set url_root in the application.cfg file.
-# Note this is the relative path.
-init app_default_uri_path _woof/manage/welcome
+# Note this is only used for default URL dispatching when no defined
+# route matches. The path is a relative path from the URL root and must
+# begin with a /
+init app_default_uri_path /_woof/manage/welcome
 
 # Where the application resides under the woof root. Normally "app" (default)
 # but can be set to "test" or whatever else
