--- a/tests/apache/httpd-cgi-alias.conf
+++ b/tests/apache/httpd-cgi-alias.conf
@@ -1,6 +1,6 @@
 # Woof! apache test config
-# - Woof! URL root at /myapp
-# - Woof! file system root at /var/myappdir
+# - Woof! URL root at %URL_ROOT%
+# - Woof! file system root at %WOOF_ROOT%
 # - CGI with script accessed through Alias
 
 ServerRoot "%SERVER_ROOT%"
@@ -26,9 +26,9 @@ DocumentRoot "%SERVER_ROOT%/htdocs"
     Allow from all
 </Directory>
 
-Alias /myapp/stylesheets "%WOOF_ROOT%/public/stylesheets"
-Alias /myapp/images "%WOOF_ROOT%/public/images"
-Alias /myapp "%WOOF_ROOT%/public/cgi_server.tcl"
+Alias %URL_ROOT%/stylesheets "%WOOF_ROOT%/public/stylesheets"
+Alias %URL_ROOT%/images "%WOOF_ROOT%/public/images"
+Alias %URL_ROOT% "%WOOF_ROOT%/public/cgi_server.tcl"
 <Directory "%WOOF_ROOT%/public">
     Order allow,deny
     Allow from all
