--- a/tests/apache/httpd-cgi-dedicated.conf
+++ b/tests/apache/httpd-cgi-dedicated.conf
@@ -22,6 +22,6 @@ DocumentRoot "%WOOF_ROOT%/public"
     Options +ExecCGI
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ cgi_server.tcl?$1 [QSA,L]
+    RewriteRule ^(.*)$ cgi_server.tcl/$1 [QSA,L]
 </Directory>
 
