More test progress

--- a/tests/apache/httpd-cgi-alias.conf
+++ b/tests/apache/httpd-cgi-alias.conf
@@ -4,7 +4,7 @@
 # - CGI with script accessed through Alias
 
 ServerRoot "%SERVER_ROOT%"
-Listen 8080
+Listen %SERVER_PORT%
 
 Include conf/common.conf
 
@@ -12,7 +12,7 @@ LoadModule alias_module modules/mod_alias.so
 LoadModule cgi_module modules/mod_cgi.so
 
 ServerAdmin admin@localhost
-ServerName localhost:8080
+ServerName localhost:%SERVER_PORT%
 
 DocumentRoot "%SERVER_ROOT%/htdocs"
 <Directory />
@@ -28,7 +28,7 @@ DocumentRoot "%SERVER_ROOT%/htdocs"
 
 Alias %URL_ROOT%/stylesheets "%WOOF_ROOT%/public/stylesheets"
 Alias %URL_ROOT%/images "%WOOF_ROOT%/public/images"
-Alias %URL_ROOT% "%WOOF_ROOT%/public/cgi_server.tcl"
+AliasMatch %URL_ROOT%/(.*) "%WOOF_ROOT%/public/cgi_server.tcl/$1"
 <Directory "%WOOF_ROOT%/public">
     Order allow,deny
     Allow from all
