--- a/tests/apache/httpd-cgi-rewrite.conf
+++ b/tests/apache/httpd-cgi-rewrite.conf
@@ -3,8 +3,8 @@
 # - Woof! file system root at /var/myappdir
 # - CGI with script accessed through Rewrite
 
-ServerRoot "C:/Program Files/Apache Software Foundation/Apache2.2"
-Listen 8080
+ServerRoot "%SERVER_ROOT%"
+Listen %SERVER_PORT%
 
 Include common.conf
 
@@ -13,7 +13,7 @@ LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule cgi_module modules/mod_cgi.so
 
 ServerAdmin admin@localhost
-ServerName localhost:8080
+ServerName localhost:%SERVER_PORT%
 
 DocumentRoot "C:/Program Files/Apache Software Foundation/Apache2.2/htdocs"
 <Directory />
