--- a/tests/apache/httpd-cgi-dedicated.conf
+++ b/tests/apache/httpd-cgi-dedicated.conf
@@ -4,7 +4,7 @@
 # - CGI
 
 ServerRoot "%SERVER_ROOT%"
-Listen 8080
+Listen %SERVER_PORT%
 
 Include conf/common.conf
 
@@ -12,7 +12,7 @@ LoadModule cgi_module modules/mod_cgi.so
 LoadModule rewrite_module modules/mod_rewrite.so
 
 ServerAdmin admin@localhost
-ServerName localhost:8080
+ServerName localhost:%SERVER_PORT%
 
 
 DocumentRoot "%WOOF_ROOT%/public"
