cgi-rewrite tests

--- a/tests/apache/common.conf
+++ b/tests/apache/common.conf
@@ -1,3 +1,10 @@
+# Common config file for Apache settings
+
+ServerRoot "%SERVER_ROOT%"
+Listen %SERVER_PORT%
+ServerAdmin admin@localhost
+ServerName localhost:%SERVER_PORT%
+
 LoadModule authz_host_module modules/mod_authz_host.so
 LoadModule log_config_module modules/mod_log_config.so
 LoadModule env_module modules/mod_env.so
