--- a/tests/apache/httpd-cgi-rewrite.conf
+++ b/tests/apache/httpd-cgi-rewrite.conf
@@ -1,21 +1,15 @@
 # Woof! apache test config
-# - Woof! URL root at /myapp
-# - Woof! file system root at /var/myappdir
+# - Woof! URL root at %URL_ROOT%
+# - Woof! file system root at %WOOF_ROOT%
 # - CGI with script accessed through Rewrite
 
-ServerRoot "%SERVER_ROOT%"
-Listen %SERVER_PORT%
-
-Include common.conf
+Include conf/common.conf
 
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule cgi_module modules/mod_cgi.so
 
-ServerAdmin admin@localhost
-ServerName localhost:%SERVER_PORT%
-
-DocumentRoot "C:/Program Files/Apache Software Foundation/Apache2.2/htdocs"
+DocumentRoot "%SERVER_ROOT%/htdocs"
 <Directory />
     Options FollowSymLinks
     AllowOverride All
@@ -23,15 +17,18 @@ DocumentRoot "C:/Program Files/Apache Software Foundation/Apache2.2/htdocs"
     Deny from all
 </Directory>
 
-Alias /myapp c:/var/myappdir/public
-<Directory "c:/var/myappdir/public">
+# This alias below needed for static resources
+# Note this alias will fail if URL_ROOT is /
+Alias %URL_ROOT% "%WOOF_ROOT%/public"
+
+<Directory "%WOOF_ROOT%/public">
     Order allow,deny
     Allow from all
-    AddHandler cgi-script .pl
     AddHandler cgi-script .tcl
     Options +ExecCGI
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^/myapp/(.*)$ c:/var/myappdir/public/cgi_server.tcl/$1 [QSA,L]
+    RewriteBase "%URL_ROOT%"
+    RewriteRule ^(.*)$ "cgi_server.tcl/$1" [QSA,L]
 </Directory>
 
