Some IIS test beginnings

--- a/tests/apache/httpd-cgi-dedicated.conf
+++ b/tests/apache/httpd-cgi-dedicated.conf
@@ -3,6 +3,8 @@
 # - Document root is Woof public directory
 # - CGI
 
+# TBD - change the dedicated config to allow a different URL root
+
 Include conf/common.conf
 
 LoadModule cgi_module modules/mod_cgi.so
