--- a/tests/apache/httpd-scgi-alias.conf
+++ b/tests/apache/httpd-scgi-alias.conf
@@ -1,32 +1,27 @@
 # Woof! apache test config
-# - Woof! URL root at /myapp
-# - Woof! file system root at /var/myappdir
-# - SCGI interface
+# - Woof! URL root at %URL_ROOT%
+# - Woof! file system root at %WOOF_ROOT%
+# - SCGI interface - aliased
 
-ServerRoot "C:/Program Files/Apache Software Foundation/Apache2.2"
-Listen 8080
 
 Include conf/common.conf
 
 LoadModule alias_module modules/mod_alias.so
 LoadModule scgi_module modules/mod_scgi.so
 
-ServerAdmin admin@localhost
-ServerName localhost:8080
-
-DocumentRoot "C:\Documents and Settings\ashok\My Documents\src\woof\public"
+DocumentRoot "%WOOF_ROOT%/public"
 <Directory />
     Order deny,allow
     Deny from all
 </Directory>
 
-AliasMatch /myapp/((stylesheets|images)/.*) "/var/myappdir/public/$1"
-SCGIMount /myapp 127.0.0.1:9999
-<LocationMatch "/myapp/stylesheets|images/">
+AliasMatch %URL_ROOT%/((stylesheets|images)/.*) "%WOOF_ROOT%/public/$1"
+SCGIMount %URL_ROOT% 127.0.0.1:9999
+<LocationMatch "%URL_ROOT%/stylesheets|images/">
     SCGIHandler Off
 </LocationMatch>
 
-<Directory "/var/myappdir/public">
+<Directory "%WOOF_ROOT%/public">
     Order allow,deny
     Allow from all
 </Directory>
