Test support for wibble

--- a/tests/apache/httpd-scgi-dedicated.conf
+++ b/tests/apache/httpd-scgi-dedicated.conf
@@ -10,7 +10,7 @@ LoadModule scgi_module modules/mod_scgi.so
 DocumentRoot "%WOOF_ROOT%/public"
 <Directory />
     Order deny,allow
-    Deny from all
+    Allow from all
 </Directory>
 
 # Note %URL_ROOT% must be / for this config to work
