--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -55,3 +55,7 @@ init lib_dirs [list ]
 
 # Path to the route definition file
 init route_file config/routes.cfg
+
+# Session key name. If hosting multiple Woof! installations on a single
+# system, may need to change the session identifier cookie name.
+init session_key_name "woofsid"
