Add support for multiple template formats

--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -32,6 +32,15 @@ init run_mode development
 # Controls whether scripts are reloaded for every request
 init reload_scripts [expr {($run_mode eq "development") ? "true" : "false"}]
 
+# List of template processors. Each element pair consists of the
+# file extension and the corresponding template processing command.
+# File extensions are tried in the same order. Must be specified
+# in lower case.
+init template_processors {
+    .wtf  ::woof::wtf
+    .md   ::woof::hoedown 
+}
+
 # Controls whether templates are reloaded for every request
 init reload_templates [expr {($run_mode eq "development") ? "true" : "false"}]
 
@@ -59,3 +68,4 @@ init route_file config/routes.cfg
 # Session key name. If hosting multiple Woof! installations on a single
 # system, may need to change the session identifier cookie name.
 init session_key_name "woofsid"
+
