Finished template processor docs

--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -32,17 +32,18 @@ init run_mode development
 # Controls whether scripts are reloaded for every request
 init reload_scripts [expr {($run_mode eq "development") ? "true" : "false"}]
 
-# List of template processors. Each element pair consists of the
-# file extension and the corresponding template processing command.
-# File extensions are tried in the same order. Must be specified
-# in lower case.
-init template_processors {
-    .wtf  ::woof::wtf
-    .md   ::woof::hoedown 
-}
-
 # Controls whether templates are reloaded for every request
 init reload_templates [expr {($run_mode eq "development") ? "true" : "false"}]
+
+# Dictionary of template processors. Each element pair consists of the
+# file extension and the corresponding template processing command.
+# File extensions are tried in the order listed. Must be specified
+# in lower case. You may add template processors in any order but
+# note that if you remove the entry for .wtf, the default layout and
+# any other WTF based templates will not work.
+init template_processors {
+    .wtf  ::woof::wtf
+}
 
 # loglevel - debug, info, notice, warn, err, crit, alert, emerg
 init log_level [expr {($run_mode eq "development") ? "debug" : "info"}]
