Default to NPH for scgi

--- a/config/_woof.cfg
+++ b/config/_woof.cfg
@@ -70,3 +70,7 @@ init route_file config/routes.cfg
 # system, may need to change the session identifier cookie name.
 init session_key_name "woofsid"
 
+# SCGI settings
+# If true, SCGI generates the entire HTTP headers instead of CGI headers
+# (CGI non-parsed headers mode)
+init scgi_enable_nph 0
