Ignore more files

--- a/.hgignore
+++ b/.hgignore
@@ -10,3 +10,8 @@ syntax: glob
 application.cfg
 dist
 temp
+thirdparty/isapi_scgi
+cleanup.cmd
+prepare.cmd
+testconfig.cfg
+PATCH-for-load-failure.txt
